(rule
 (copy ../../lib/skiplist.ml skiplist.ml))

(test
 (name qcheck_skiplist)
 (libraries multicamlDS qcheck qcheck-alcotest)
 (modules qcheck_skiplist))

(test
 (name runner)
 (libraries multicamlDS qcheck)
 (modules runner))

(test
 (name dscheck_skiplist)
 (libraries atomic dscheck alcotest)
 (modules skiplist dscheck_skiplist))
